# scoreanim

./: .gitignore  CLAUDE.md  pyproject.toml  run.sh
docs/: ARCHITECTURE.md  BACKLOG.md  LIVE_TIMING_BRIEF.md  PHASE11_BRIEF.md  PHASE12_BRIEF.md  PHASES.md  REFACTOR_BRIEF.md  REFACTOR_FINDINGS.md  ROADMAP.md
scoreanim/: __main__.py  app.py
spikes/: NOTES.md  audio_playhead.py  beat_domain.py  complex1_triage.py  condense_prep.py  decode_audio.py  fidelity.py  hide_first_system.py  m21_behavior.py  mei_bridge.py  part_group.py  part_label.py  phase10r_spike.py  spanner_split.py  svg_anatomy.py  ties.py  timemap.py  video_test_triage.py
testdata/: bar_repeat_min.musicxml  bigband1.musicxml  broken_bracket_and_slur_test.dorico  broken_hairpin_and_slur_test.dorico  broken_hairpin_and_slur_test.musicxml  complex1.musicxml  complex3.musicxml  condense_min.musicxml  pickup_min.musicxml  tall_system_min.musicxml  testdata.scoreanim  testscore.dorico  testscore.musicxml  testscore.tempo  video_test.musicxml
tests/: conftest.py  golden.py  test_adapter_coverage.py  test_adapter_groups.py  test_adapter_layout.py  test_adapter_part_texts.py  test_adapter_systems.py  test_animate_apply.py  test_animation.py  test_app_state.py  test_bar_repeat.py  test_check_score.py  test_clock.py  test_collapsible.py  test_complex1.py  test_condense.py  test_core_types.py  test_document_sync.py  test_export.py  test_follow_monotonic.py  test_frame_clock.py  test_golden_layouts.py  test_hide_empty_staves.py  test_identity_join.py  test_inspector.py  test_live_oracle.py  test_measure_identity.py  (+34 more)
(+98 files in other folders)
